--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,7 +26,7 @@ jobs:
       run: cargo test --verbose
 
     - name: 📏 Check formatting
-      run: cargo fmt --test
+      run: cargo fmt --check
 
     - name: 🔍 Linting
       run: cargo clippy
