--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,13 +20,13 @@ jobs:
       uses: actions/checkout@v4
 
     - name: 🔨 Build
-      run: cargo build --verbose
+      run: cargo build --quiet
 
     - name: ✅ Run tests
-      run: cargo test --verbose
+      run: cargo test --quiet --no-fail-fast
 
     - name: 📏 Check formatting
-      run: cargo fmt --check
+      run: cargo fmt --quiet --check
 
     - name: 🔍 Linting
       run: cargo clippy
