--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,6 +13,7 @@ env:
 
 jobs:
   build:
+    name: Rust workflow
     runs-on: ubuntu-latest
 
     steps:
@@ -20,13 +21,13 @@ jobs:
       uses: actions/checkout@v4
 
     - name: 🔨 Build
-      run: cargo build --quiet
+      run: cargo build
 
     - name: ✅ Run tests
-      run: cargo test --quiet --no-fail-fast
+      run: cargo test --no-fail-fast
 
     - name: 📏 Check formatting
-      run: cargo fmt --quiet --check
+      run: cargo fmt --check
 
     - name: 🔍 Linting
       run: cargo clippy
